openturns/1.17/_sources/auto_reliability_sensitivity/index.rst.txt
:orphan:



.. _sphx_glr_auto_reliability_sensitivity:

.. _Reliability & Sensitivity:

Reliability & Sensitivity
=========================


.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_auto_reliability_sensitivity_central_dispersion:

.. _Central dispersion:

Central dispersion
------------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Evaluate the mean of a random vector by simulations">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/central_dispersion/images/thumb/sphx_glr_plot_expectation_simulation_algorithm_thumb.png
     :alt: Evaluate the mean of a random vector by simulations

     :ref:`sphx_glr_auto_reliability_sensitivity_central_dispersion_plot_expectation_simulation_algorithm.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/central_dispersion/plot_expectation_simulation_algorithm

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Analyse the central tendency of a cantilever beam">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/central_dispersion/images/thumb/sphx_glr_plot_central_tendency_thumb.png
     :alt: Analyse the central tendency of a cantilever beam

     :ref:`sphx_glr_auto_reliability_sensitivity_central_dispersion_plot_central_tendency.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/central_dispersion/plot_central_tendency

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate moments from Taylor expansions">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/central_dispersion/images/thumb/sphx_glr_plot_estimate_moments_taylor_thumb.png
     :alt: Estimate moments from Taylor expansions

     :ref:`sphx_glr_auto_reliability_sensitivity_central_dispersion_plot_estimate_moments_taylor.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/central_dispersion/plot_estimate_moments_taylor
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_auto_reliability_sensitivity_reliability:

.. _Reliability:

Reliability
-----------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a probability with Latin Hypercube Sampling">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_lhs_thumb.png
     :alt: Estimate a probability with Latin Hypercube Sampling

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_lhs.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_estimate_probability_lhs

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simulate an Event">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_event_manipulation_thumb.png
     :alt: Simulate an Event

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_event_manipulation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_event_manipulation

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a probability with Monte Carlo">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_monte_carlo_thumb.png
     :alt: Estimate a probability with Monte Carlo

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_monte_carlo.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_estimate_probability_monte_carlo

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use a randomized QMC algorithm">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_randomized_qmc_thumb.png
     :alt: Use a randomized QMC algorithm

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_randomized_qmc.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_estimate_probability_randomized_qmc

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the Adaptive Directional Sampling Algorithm">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_adaptive_directional_sampling_thumb.png
     :alt: Use the Adaptive Directional Sampling Algorithm

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_adaptive_directional_sampling.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_estimate_probability_adaptive_directional_sampling

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the post-analytical importance sampling algorithm">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_post_analytical_importance_sampling_thumb.png
     :alt: Use the post-analytical importance sampling algorithm

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_post_analytical_importance_sampling.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_post_analytical_importance_sampling

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the Directional Sampling Algorithm">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_directional_sampling_thumb.png
     :alt: Use the Directional Sampling Algorithm

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_directional_sampling.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_estimate_probability_directional_sampling

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a flooding probability">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_flood_model_thumb.png
     :alt: Estimate a flooding probability

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_flood_model.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_flood_model

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Specify a simulation algorithm">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_probability_simulation_parametrization_thumb.png
     :alt: Specify a simulation algorithm

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_probability_simulation_parametrization.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_probability_simulation_parametrization

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a threshold event">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_create_threshold_event_thumb.png
     :alt: Create a threshold event

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_create_threshold_event.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_create_threshold_event

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the Importance Sampling algorithm">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_importance_sampling_thumb.png
     :alt: Use the Importance Sampling algorithm

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_importance_sampling.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_estimate_probability_importance_sampling

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a probability with Monte-Carlo on axial stressed beam: a quick start guide to reliabil...">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_axial_stressed_beam_quickstart_thumb.png
     :alt: Estimate a probability with Monte-Carlo on axial stressed beam: a quick start guide to reliability

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_axial_stressed_beam_quickstart.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_axial_stressed_beam_quickstart

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Exploitation of simulation algorithm results">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_probability_simulation_results_thumb.png
     :alt: Exploitation of simulation algorithm results

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_probability_simulation_results.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_probability_simulation_results

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the FORM algorithm in case of several design points">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_multi_form_thumb.png
     :alt: Use the FORM algorithm in case of several design points

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_multi_form.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_multi_form

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Subset Sampling">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_subset_sampling_thumb.png
     :alt: Subset Sampling

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_subset_sampling.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_subset_sampling

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the FORM - SORM algorithms">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_estimate_probability_form_thumb.png
     :alt: Use the FORM - SORM algorithms

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_estimate_probability_form.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_estimate_probability_form

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a domain event">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_create_domain_event_thumb.png
     :alt: Create a domain event

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_create_domain_event.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_create_domain_event

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Test the design point with the Strong Maximum Test">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_strong_maximum_test_thumb.png
     :alt: Test the design point with the Strong Maximum Test

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_strong_maximum_test.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_strong_maximum_test

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Time variant system reliability problem">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_proba_system_event_thumb.png
     :alt: Time variant system reliability problem

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_proba_system_event.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_proba_system_event

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create unions or intersections of events">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_event_system_thumb.png
     :alt: Create unions or intersections of events

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_event_system.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_event_system

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Axial stressed beam : comparing different methods to estimate a probability">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_axial_stressed_beam_thumb.png
     :alt: Axial stressed beam : comparing different methods to estimate a probability

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_axial_stressed_beam.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_axial_stressed_beam

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An illustrated example of a FORM probability estimate">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability/images/thumb/sphx_glr_plot_form_explained_thumb.png
     :alt: An illustrated example of a FORM probability estimate

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_plot_form_explained.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability/plot_form_explained
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_auto_reliability_sensitivity_reliability_processes:

.. _Reliability processes:

Reliability processes
---------------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create an event based on a process">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability_processes/images/thumb/sphx_glr_plot_event_process_thumb.png
     :alt: Create an event based on a process

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_processes_plot_event_process.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability_processes/plot_event_process

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate a process-based event probability">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/reliability_processes/images/thumb/sphx_glr_plot_estimate_probability_monte_carlo_process_thumb.png
     :alt: Estimate a process-based event probability

     :ref:`sphx_glr_auto_reliability_sensitivity_reliability_processes_plot_estimate_probability_monte_carlo_process.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/reliability_processes/plot_estimate_probability_monte_carlo_process
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_auto_reliability_sensitivity_sensitivity_analysis:

.. _Sensitivity analysis:

Sensitivity analysis
--------------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="FAST sensitivity indices">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_fast_thumb.png
     :alt: FAST sensitivity indices

     :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_fast.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_fast

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Cobweb graph as sensitivity tool">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_cobweb_thumb.png
     :alt: Cobweb graph as sensitivity tool

     :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_cobweb.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_cobweb

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate Sobol&#x27; indices for a function with multivariate output">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_sobol_multivariate_thumb.png
     :alt: Estimate Sobol' indices for a function with multivariate output

     :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_sobol_multivariate.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_sobol_multivariate

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Sobol&#x27; sensitivity indices from chaos">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_functional_chaos_sensitivity_thumb.png
     :alt: Sobol' sensitivity indices from chaos

     :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_functional_chaos_sensitivity.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/sensitivity_analysis/plot_functional_chaos_sensitivity

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Use the ANCOVA indices">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_ancova_thumb.png
     :alt: Use the ANCOVA indices

     :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_ancova.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_ancova

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate Sobol&#x27; indices for the Ishigami function by a sampling method: a quick start guide to ...">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/sensitivity_analysis/images/thumb/sphx_glr_plot_sensitivity_sobol_thumb.png
     :alt: Estimate Sobol' indices for the Ishigami function by a sampling method: a quick start guide to sensitivity analysis

     :ref:`sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_sensitivity_sobol.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/sensitivity_analysis/plot_sensitivity_sobol
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_auto_reliability_sensitivity_design_of_experiments:

.. _Design of experiments:

Design of experiments
---------------------



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a composite design of experiments">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_composite_experiment_thumb.png
     :alt: Create a composite design of experiments

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_composite_experiment.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_composite_experiment

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a Monte Carlo design of experiments">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_monte_carlo_experiment_thumb.png
     :alt: Create a Monte Carlo design of experiments

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_monte_carlo_experiment.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_monte_carlo_experiment

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Probabilistic design of experiments">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_probabilistic_design_thumb.png
     :alt: Probabilistic design of experiments

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_probabilistic_design.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_probabilistic_design

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a Gauss product design">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_gauss_product_experiment_thumb.png
     :alt: Create a Gauss product design

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_gauss_product_experiment.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_gauss_product_experiment

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a random design of experiments">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_create_random_doe_thumb.png
     :alt: Create a random design of experiments

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_create_random_doe.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_create_random_doe

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create mixed deterministic and probabilistic designs of experiments">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_mixed_design_thumb.png
     :alt: Create mixed deterministic and probabilistic designs of experiments

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_mixed_design.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_mixed_design

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a design of experiments with discrete and continuous variables">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_design_of_experiment_continuous_discrete_thumb.png
     :alt: Create a design of experiments with discrete and continuous variables

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_design_of_experiment_continuous_discrete.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_design_of_experiment_continuous_discrete

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The PlotDesign method">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_plot_design_thumb.png
     :alt: The PlotDesign method

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_plot_design.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_plot_design

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Deterministic design of experiments">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_deterministic_design_thumb.png
     :alt: Deterministic design of experiments

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_deterministic_design.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_deterministic_design

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Create a deterministic design of experiments">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_create_deterministic_doe_thumb.png
     :alt: Create a deterministic design of experiments

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_create_deterministic_doe.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_create_deterministic_doe

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Generate low discrepancy sequences">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_low_discrepancy_sequence_thumb.png
     :alt: Generate low discrepancy sequences

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_low_discrepancy_sequence.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_low_discrepancy_sequence

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Various design of experiments in OpenTURNS">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_design_of_experiments_thumb.png
     :alt: Various design of experiments in OpenTURNS

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_design_of_experiments.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_design_of_experiments

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Optimize an LHS design of experiments">

.. only:: html

 .. figure:: /auto_reliability_sensitivity/design_of_experiments/images/thumb/sphx_glr_plot_optimal_lhs_thumb.png
     :alt: Optimize an LHS design of experiments

     :ref:`sphx_glr_auto_reliability_sensitivity_design_of_experiments_plot_optimal_lhs.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_reliability_sensitivity/design_of_experiments/plot_optimal_lhs
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download sphx-glr-download-python

    :download:`Download all examples in Python source code: auto_reliability_sensitivity_python.zip </auto_reliability_sensitivity/auto_reliability_sensitivity_python.zip>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

    :download:`Download all examples in Jupyter notebooks: auto_reliability_sensitivity_jupyter.zip </auto_reliability_sensitivity/auto_reliability_sensitivity_jupyter.zip>`
